--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,23 @@ main {
 h1 {
     margin: 0;
 }
+
+table {
+    width: 100%;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+
+th, td {
+    padding: .5rem;
+}
+
+td {
+    text-align: center;
+}
+
+ul {
+    margin-bottom: 0;
+}
