--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,35 @@ main {
     padding: 1rem;
 }
 
+p {
+    margin-top: 0;
+}
+
+.search {
+    display: flex;
+}
+
+.search label {
+    margin-right: .5rem;
+}
+
+.search input {
+    height: 25px;
+    margin-bottom: 1.5rem;
+}
+
+.search button {
+    height: 25px;
+    border-radius: 0;
+    border: 1px solid lightgray;
+    border-left: none;
+    cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 h1 {
     margin: 0;
 }
