--- a/interests.css
+++ b/interests.css
@@ -14,7 +14,7 @@
         flex-direction: column;
     }
 
-    #flickr-img {
-        align-self: center !important;
+    #flickr img {
+        align-self: center;
     }
 }
